; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/subdev/fb/extr_base.c_nvkm_fb_tile_fini.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/subdev/fb/extr_base.c_nvkm_fb_tile_fini.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nvkm_fb = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 (%struct.nvkm_fb*, i32, %struct.nvkm_fb_tile*)* }
%struct.nvkm_fb_tile = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nvkm_fb_tile_fini(%struct.nvkm_fb* %0, i32 %1, %struct.nvkm_fb_tile* %2) #0 {
  %4 = alloca %struct.nvkm_fb*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.nvkm_fb_tile*, align 8
  store %struct.nvkm_fb* %0, %struct.nvkm_fb** %4, align 8
  store i32 %1, i32* %5, align 4
  store %struct.nvkm_fb_tile* %2, %struct.nvkm_fb_tile** %6, align 8
  %7 = load %struct.nvkm_fb*, %struct.nvkm_fb** %4, align 8
  %8 = getelementptr inbounds %struct.nvkm_fb, %struct.nvkm_fb* %7, i32 0, i32 0
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = load i32 (%struct.nvkm_fb*, i32, %struct.nvkm_fb_tile*)*, i32 (%struct.nvkm_fb*, i32, %struct.nvkm_fb_tile*)** %11, align 8
  %13 = load %struct.nvkm_fb*, %struct.nvkm_fb** %4, align 8
  %14 = load i32, i32* %5, align 4
  %15 = load %struct.nvkm_fb_tile*, %struct.nvkm_fb_tile** %6, align 8
  %16 = call i32 %12(%struct.nvkm_fb* %13, i32 %14, %struct.nvkm_fb_tile* %15)
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
